<resources>
    <string name="app_name">MoviesApp</string>
    <string name="settings">Settings</string>
    <string name="poster_thumbnail">Poster Thumbnail</string>
    <string name="trailer_1">trailer-1</string>
    <string name="trailer_1_image">trailer_1 image</string>
    <string name="trailer_2_image">trailer_2 image</string>
    <string name="trailer_2">trailer-2</string>
    <string name="ratings_format">Rating:</string>
    <string name="rate_this_movie">Rate this Movie</string>
    <string name="movie_details">Movie Details</string>

</resources>
