<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MovieDetailActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/mv_poster_thumbnail"
                android:layout_width="50dp"
                android:layout_height="100dp"

                app:srcCompat="@android:drawable/gallery_thumb"
                android:contentDescription="@string/poster_thumbnail" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:text=""
                android:textSize="12sp"
                android:fontFamily="serif-monospace"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/mv_ratings"
                android:layout_width="150dp"
                android:layout_height="20dp"

                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:text=""
                android:textSize="12sp"
                android:fontFamily="serif-monospace"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/mv_releasedate"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="12sp"
                android:text=""
                android:textAlignment="center"
                android:fontFamily="serif-monospace"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:typeface="sans"
                    android:text="@string/trailer_1"/>
                <ImageView
                    android:id="@+id/mv_trailer_image1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_play_circle_filled_black_24dp"
                    android:contentDescription="@string/trailer_1_image" />
                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:typeface="sans"
                    android:text="@string/trailer_2"/>
                <ImageView
                    android:id="@+id/mv_trailer_image2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_play_circle_filled_black_24dp"
                    android:contentDescription="@string/trailer_2_image" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" android:orientation="vertical">

            <TextView
                android:id="@+id/mv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:lines="3"
                android:padding="10dp"
                android:text=""
                android:fontFamily="serif-monospace"
                android:textSize="12sp"
                android:scrollbars="vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:numStars="4"
                android:isIndicator="false"
                android:stepSize="0.5"
                style="@style/Base.Widget.AppCompat.RatingBar.Small" />

            <Button
                android:id="@+id/ratingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/rate_this_movie" />
        </LinearLayout>



</LinearLayout>